GUI-1180 Handle dropdownlist overflow issue in operationModal

--- a/stylesheets/less/partials/modal.less
+++ b/stylesheets/less/partials/modal.less
@@ -1982,6 +1982,13 @@
         padding: 0px;
         .rounded(3px);
         overflow: hidden;
+
+        &.udfMode {
+            overflow: visible !important;
+            .tableWrapper {
+                overflow-y: visible !important;
+            }
+        }
         .tableWrapper {
             table {
                 width: 100%;
@@ -2021,11 +2028,11 @@
                         .size(@width: 100%, @height: 25px);
                         margin-left: 0;
 
-                    }
-                }
+                        .list.openList .openli{
+                            display: block !important;
+                        }
 
-                #agrTable-udfModule .list.openList li {
-                    display: block !important;
+                    }
                 }
             }
         }
